examples/test/testpolicy11036.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11036
  namespace: namespace374
spec:
  podSelector:
    matchLabels:
      key41: value18
      key46: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value31
          key10: value5
      podSelector:
        matchLabels:
          key29: value14
          key15: value18
